# pyrdf-prefix

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: Predefined-Namespaces.tsv
src/pyrdf_namespaces/: __init__.py  namespace.py
src/pyrdf_namespaces/predefined/: _AS.py  _BRICK.py  _CC.py  _CSVW.py  _CTAG.py  _DC.py  _DC11.py  _DCAM.py  _DCAT.py  _DCMITYPE.py  _DCTERMS.py  _DOAP.py  _DQV.py  _DUV.py  _FOAF.py  _GEO.py  _GR.py  _GRDDL.py  _ICAL.py  _JSONLD.py  _LDP.py  _MA.py  _OA.py  _ODRL.py  _OG.py  _ORG.py  _OWL.py  _PROF.py  _PROV.py  _QB.py  _RDF.py  _RDFA.py  _RDFS.py  _REV.py  _RIF.py  _RR.py  _SCHEMA.py  _SD.py  _SH.py  _SIOC.py  (+16 more)
src/pyrdf_prefix/: __init__.py  namespace.py
src/pyrdf_prefix/predefined/: _AS.py  _BRICK.py  _CC.py  _CSVW.py  _CTAG.py  _DC.py  _DC11.py  _DCAM.py  _DCAT.py  _DCMITYPE.py  _DCTERMS.py  _DOAP.py  _DQV.py  _DUV.py  _FOAF.py  _GEO.py  _GR.py  _GRDDL.py  _ICAL.py  _JSONLD.py  _LDP.py  _MA.py  _OA.py  _ODRL.py  _OG.py  _ORG.py  _OWL.py  _PROF.py  _PROV.py  _QB.py  _RDF.py  _RDFA.py  _RDFS.py  _REV.py  _RIF.py  _RR.py  _SCHEMA.py  _SD.py  _SH.py  _SIOC.py  (+16 more)
src/utils/: generate_predefined.py
tests/: test_namespace.py
