[project]
name = "pyrdf-prefix"
version = "0.1.0"
description = "Easily access common RDF vocabularies and your own custom namespaces, for usage with pyoxigraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyoxigraph>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrdf_prefix"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]
